--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,3 @@
 [build]
-  publish = "public"     # Directorio que será desplegado
-  functions = "netlify/functions" # Directorio de las Netlify Functions
-
-# Regla de Redirección (Opcional, pero útil para SPA/enrutamiento)
-# [[redirects]]
-#   from = "/*"
-#   to = "/index.html"
-#   status = 200
+  publish = "public"     # Carpeta del Frontend
+  functions = "netlify/functions" # Carpeta del Backend
