--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "course-enroll-frontend",
-  "version": "0.1.0",
+  "name": "course-enroll-fullstack",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -20,5 +20,14 @@
     "tailwindcss": "^3.5.0",
     "vite": "^5.2.0",
     "@vitejs/plugin-react": "^4.0.0"
+  },
+  "netlifyFunctionsDependencies": {
+    "pg": "^8.11.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "cloudinary": "^1.32.0",
+    "googleapis": "^115.0.0",
+    "node-fetch": "^3.4.1",
+    "formidable": "^3.5.2"
   }
 }
